<resources>
    <string name="app_name">TeDe</string>
    <string name="logo_icon">logo</string>
    <string name="background_theme">background</string>
    <string name="main_text">MIREA Wizard - твой личный волшебник</string>
    <string name="offer">Выбери институт и оставь свой отзыв о преподавателях</string>
    <string name="resume">Оставить отзыв</string>
    <string name="iii_inst">ИИИ</string>
    <string name="iit_inst">ИИТ</string>
    <string name="ikb_inst">ИКБ</string>
    <string name="iptip_inst">ИПТИП</string>
    <string name="iri_inst">ИРИ</string>
    <string name="itht_inst">ИТХТ</string>
    <string name="itu_inst">ИТУ</string>
    <string name="background_card">teacher background card</string>
    <string name="teacher_image">teachers image</string>

</resources>